--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -143,7 +143,7 @@
 		<challenge_title_offer>Convite para jogar</challenge_title_offer>
 		<challenge_information>convidou para jogar uma partida com as seguintes características:</challenge_information>
 		<challenge_my_pieces>Minhas peças:</challenge_my_pieces>
-		<challenge_op_pieces>Suas peças:</challenge_op_pieces>
+		<challenge_op_pieces>Peças do oponente:</challenge_op_pieces>
 		<challenge_time_label>Tempo da partida:</challenge_time_label>
 		<challenge_category>Categoria de jogo:</challenge_category>
 		<challenge_inc_label>Incremento:</challenge_inc_label>
