Modified: Change action buttons with images to text
../css/ChallengeMenu.css : changes in challenge menu window
challenge/challenge.js : change position of challenge menu window
interface/challengemenu.js : change images to text of buttons, change class of buttons
lang/pt_BR.xml : add new texts for challenge menu window

--- a/scripts/lang/pt_BR.xml
+++ b/scripts/lang/pt_BR.xml
@@ -17,6 +17,8 @@
 		<window_close>Fechar</window_close>
 		<window_save>Salvar</window_save>
 		<window_accept>Aceitar</window_accept>
+		<window_play>Jogar</window_play>
+		<window_continue>Continuar</window_continue>
 		<window_cancel>Cancelar</window_cancel>
 		<window_decline>Recusar</window_decline>
 		<window_search>Buscar</window_search>
